package facade;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/3/22 17:50
 */
public class CPU {

    public void run() {
        System.out.println("CPU启动");
    }
}
