package facade;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/3/22 17:50
 */
public class HardDisk {

    public void read() {
        System.out.println("硬盘读取");
    }
}
