package facade;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/3/22 17:50
 */
public class Memory {

    public void check() {
        System.out.println("内存进行自检");
    }
}
